# OrinFlow_lab

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
datasets/: coco_medium.yaml
orinflow/: __init__.py  config.py
orinflow/data/: __init__.py  calibration.py  preprocessing.py
orinflow/evaluate/: __init__.py  metrics.py
orinflow/export/: __init__.py  onnx.py
orinflow/optimize/: __init__.py  qat.py  quantize.py  sparse_qat.py  sparsify.py
orinflow/pipelines/: spars.py
orinflow/runtime/: __init__.py  ort.py
scripts/: add.py  calibrate.py  changeopset.py  evaluate.py  export.py  prepare_calib_data.py  qat.py  quantize.py  run_align.py  run_export.py  run_quant.py  sparse_qat.py  sparsify.py  yolo_prep.py
